; ModuleID = '/home/carl/AnghaBench/xLua/build/luajit-2.1.0b3/src/extr_lib_jit.c_jit_checktrace.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luajit-2.1.0b3/src/extr_lib_jit.c_jit_checktrace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @jit_checktrace to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @jit_checktrace(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @lj_lib_checkint(i32* %6, i32 1)
  %8 = sext i32 %7 to i64
  store i64 %8, i64* %4, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = call %struct.TYPE_4__* @L2J(i32* %9)
  store %struct.TYPE_4__* %10, %struct.TYPE_4__** %5, align 8
  %11 = load i64, i64* %4, align 8
  %12 = icmp sgt i64 %11, 0
  br i1 %12, label %13, label %23

13:                                               ; preds = %1
  %14 = load i64, i64* %4, align 8
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = icmp slt i64 %14, %17
  br i1 %18, label %19, label %23

19:                                               ; preds = %13
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %21 = load i64, i64* %4, align 8
  %22 = call i32* @traceref(%struct.TYPE_4__* %20, i64 %21)
  store i32* %22, i32** %2, align 8
  br label %24

23:                                               ; preds = %13, %1
  store i32* null, i32** %2, align 8
  br label %24

24:                                               ; preds = %23, %19
  %25 = load i32*, i32** %2, align 8
  ret i32* %25
}

declare dso_local i32 @lj_lib_checkint(i32*, i32) #1

declare dso_local %struct.TYPE_4__* @L2J(i32*) #1

declare dso_local i32* @traceref(%struct.TYPE_4__*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
